--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="index.css">
-  <title>Frontend Mentor | NFT preview card component</title>
-</head>
-<body>
-  <div class="card">
-    Equilibrium #3429
-
-    Our Equilibrium collection promotes balance and calm.
-  
-    0.041 ETH
-    3 days left
-    
-    Creation of Jules Wyvern
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="index.css" />
+    <title>Frontend Mentor | NFT preview card component</title>
+  </head>
+  <body>
+    <div class="card">
+      <img
+        class="preview"
+        src="images/image-equilibrium.jpg"
+        alt="Equilibrium #3429"
+      />
+      <h2>Equilibrium #3429</h2>
+      <p>Our Equilibrium collection promotes balance and calm.</p>
+      <div class="sale-info">
+        <div class="price">
+          <svg width="11" height="18" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M11 10.216 5.5 18 0 10.216l5.5 3.263 5.5-3.262ZM5.5 0l5.496 9.169L5.5 12.43 0 9.17 5.5 0Z"
+              fill="#00FFF8"
+            />
+          </svg>
+          <span>0.041 ETH</span>
+        </div>
+        <div class="duration">
+          <svg width="17" height="17" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M8.305 2.007a6.667 6.667 0 1 0 0 13.334 6.667 6.667 0 0 0 0-13.334Zm2.667 7.334H8.305a.667.667 0 0 1-.667-.667V6.007a.667.667 0 0 1 1.334 0v2h2a.667.667 0 0 1 0 1.334Z"
+              fill="#8BACD9"
+            />
+          </svg>
+          <span>3 days left</span>
+        </div>
+      </div>
+      <div class="creator">
+        <img class="avatar" src="images/image-avatar.png" alt="" />
+        <span
+          >Creation of
+          <a href="# " target="_blank" rel="noopener noreferrer"
+            >Jules Wyvern</a
+          ></span
+        >
+      </div>
+    </div>
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Your Name Here</a>.
+    </div>
+  </body>
 </html>
