--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+      >. Coded by <a href="https://github.com/tbscanlon">Tom Scanlon</a>.
     </div>
   </body>
 </html>
