--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
-    <main role="main">
+    <main>
       <h1>Frontend Mentor | NFT preview card component</h1>
       <div class="card">
         <a href="#" target="_blank" rel="noopener noreferrer" class="preview">
@@ -72,7 +72,7 @@
           >
         </div>
       </div>
-      <footer role="footer" class="attribution">
+      <footer class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
